--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "test": "tsc --noEmit && npm run lint && npm run test:unit",
     "test:unit": "esbuild --bundle --platform=node test/index.ts | node"
   },
-  "author": "Matthew Brandly",
-  "license": "MIT",
+  "author": "Rei Tsunemi",
+  "license": "",
   "devDependencies": {
     "@types/assert": "1.5.6",
     "@types/events": "3.0.0",
